# Web-HW8

./: README.md
Web-HW8/: pyproject.toml
Web-HW8/task_2/: consumer.py  producer.py
