[tool.poetry]
name = "web-hw8"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.27.0"
pymongo = "^4.6.2"
redis = "^5.0.2"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
